--- a/src/Unit Tests/Rhyous.EasyCsv.Tests/Rhyous.EasyCsv.Tests.csproj
+++ b/src/Unit Tests/Rhyous.EasyCsv.Tests/Rhyous.EasyCsv.Tests.csproj
@@ -52,8 +52,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ComplexCsvTests.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\ToDataTableTests.cs" />
     <Compile Include="NaiveCsvTests.cs" />
+    <Compile Include="TestHelpers\NewLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +91,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\HeaderOnly.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\NewLine.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Data\TabNaive.csv">
