--- a/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
+++ b/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Rhyous.EasyCsv</RootNamespace>
     <AssemblyName>Rhyous.EasyCsv</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,9 +43,10 @@
   <ItemGroup>
     <Compile Include="Csv.cs" />
     <Compile Include="CsvBase.cs" />
+    <Compile Include="Model\Row.cs" />
     <Compile Include="NaiveCsv.cs" />
     <Compile Include="Extensions\CsvExtensions.cs" />
-    <Compile Include="ICsv.cs" />
+    <Compile Include="Interfaces\ICsv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
