--- a/src/NuGet/Rhyous.EasyCsv.NuGet.Sources/Package.nuspec
+++ b/src/NuGet/Rhyous.EasyCsv.NuGet.Sources/Package.nuspec
@@ -29,8 +29,7 @@
     <tags></tags>
   </metadata>
   <files>
-    <file src="lib\" target="lib" />
+    <file src="src\" target="src" />
     <file src="tools\" target="tools" />
-    <file src="content\" target="content" />
   </files>
 </package>
