--- a/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
+++ b/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
@@ -43,7 +43,10 @@
   <ItemGroup>
     <Compile Include="Csv.cs" />
     <Compile Include="CsvBase.cs" />
+    <Compile Include="CsvParser.cs" />
     <Compile Include="Exceptions\HeaderMissingException.cs" />
+    <Compile Include="Extensions\CharExtensions.cs" />
+    <Compile Include="Interfaces\ICsvParser.cs" />
     <Compile Include="Interfaces\IParent.cs" />
     <Compile Include="Model\Row.cs" />
     <Compile Include="Model\RowCollection.cs" />
