--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 /src/NuGet/Rhyous.EasyCsv.NuGet/lib/net40-client/Rhyous.EasyCsv.dll
+/src/NuGet/Rhyous.EasyCsv.NuGet.Sources/src/App_Packages/**/*
