--- a/src/NuGet/Rhyous.EasyCsv.NuGet/Package.nuspec
+++ b/src/NuGet/Rhyous.EasyCsv.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Rhyous.EasyCsv</id>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <title>Rhyous.EasyCsv</title>
     <authors>Jared Barneck (Rhyous)</authors>
     <owners>Jared Barneck (Rhyous)</owners>
@@ -16,6 +16,11 @@
     <licenseUrl>https://github.com/rhyous/EasyCsv/blob/master/LICENSE</licenseUrl>
     <copyright>Copyright Jared Barneck (Rhyous) 2015</copyright>
     <tags>csv comma separated variable easy</tags>
+    <dependencies>
+      <group targetFramework="net461">
+        <dependency id="Rhyous.StringLibrary" version="1.1.7" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
     <file src="lib\" target="lib" />
