--- a/src/NuGet/Rhyous.EasyCsv.NuGet/Rhyous.EasyCsv.NuGet.csproj
+++ b/src/NuGet/Rhyous.EasyCsv.NuGet/Rhyous.EasyCsv.NuGet.csproj
@@ -63,7 +63,7 @@
     <None Include="tools\uninstall.ps1" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="lib\net40-client\" />
+    <Folder Include="lib\net45\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -87,7 +87,7 @@
   </Target>
   <PropertyGroup>
     <PreBuildEvent>SET Project=Rhyous.EasyCsv
-copy /Y "$(SolutionDir)..\%25Project%25\$(OutDir)%25Project%25.dll" "$(ProjectDir)lib\net40-client\"
-copy /Y "$(SolutionDir)..\%25Project%25\$(OutDir)%25Project%25.pdb" "$(ProjectDir)lib\net40-client\"</PreBuildEvent>
+copy /Y "$(SolutionDir)..\%25Project%25\$(OutDir)%25Project%25.dll" "$(ProjectDir)lib\net45\"
+copy /Y "$(SolutionDir)..\%25Project%25\$(OutDir)%25Project%25.pdb" "$(ProjectDir)lib\net45\"</PreBuildEvent>
   </PropertyGroup>
 </Project>
