Easy CSV Fix for Non character symbol and extra space requirement for rows.

--- a/src/Unit Tests/Rhyous.EasyCsv.Tests/Rhyous.EasyCsv.Tests.csproj
+++ b/src/Unit Tests/Rhyous.EasyCsv.Tests/Rhyous.EasyCsv.Tests.csproj
@@ -113,6 +113,9 @@
     <Content Include="Data\SO5865747.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\1column1row.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Data\TabNaive.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
