--- a/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
+++ b/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Rhyous.StringLibrary, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rhyous.StringLibrary.1.1.9\lib\net40-client\Rhyous.StringLibrary.dll</HintPath>
+      <HintPath>..\packages\Rhyous.StringLibrary.1.1.12\lib\net40-client\Rhyous.StringLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -63,6 +63,7 @@
     <Compile Include="Extensions\CsvExtensions.cs" />
     <Compile Include="Interfaces\ICsv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializer\CsvSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
