--- a/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
+++ b/src/Rhyous.EasyCsv/Rhyous.EasyCsv.csproj
@@ -23,6 +23,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="EasyCsv.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
